# hw_web_08

./: config.ini  connect.py  consumer_email.py  consumer_sms.py  load_data.py  models.py  producer.py  pyproject.toml  search_quotes.py  test_connect.py
